<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/border"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="47.87"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/confTimer"
            android:textSize="20sp" />


    </LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right" >

	    <Button
            android:id="@+id/Button1Ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton_background"
            android:text="@string/Ok" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.02"
            android:gravity="center"
            android:text="@string/TextHour" />

        <Button
            android:id="@+id/Button03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton_background"
            android:text="@string/izquierda" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:textSize="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/Button04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton_background"
            android:text="@string/derecha" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2.62"
            android:gravity="center"
            android:text="@string/TextMin" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton_background"
            android:text="@string/izquierda" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:textSize="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/Button02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton_background"
            android:text="@string/derecha" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2.62"
            android:gravity="center"
            android:text="@string/TextSeg" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton_background"
            android:text="@string/izquierda" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:textSize="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton_background"
            android:text="@string/derecha" />
    </LinearLayout>

</LinearLayout>